gatewayapi/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: route
spec:
  parentRefs:
  - name: gateway
  hostnames:
  - "ingress-seasons.com"
  rules:
  - matches:
    - path:
        value: /summer
    backendRefs:
    - name: summer
      port: 80
  - matches:
    - path:
        value: /winter
    backendRefs:
    - name: winter
      port: 80
